updated notes, updated css to give fixed heights to span.column1 and span.column2 and allow for scrolling upon overflow

--- a/index.css
+++ b/index.css
@@ -123,4 +123,6 @@ span.column1, span.column2 {
   padding: 10px;
   align-self: flex-start;
   width: 44%;
+  max-height: 500px;
+  overflow: scroll;
 }
